Fix tracking box being behind login

--- a/frontend/src/Tracking.css
+++ b/frontend/src/Tracking.css
@@ -9,7 +9,7 @@
   padding: 15px 25px;
   border-radius: 15px;
   box-shadow: 5px 5px 10px var(--darkgray);
-  z-index: -1;
+  z-index: 9999;
 }
 
 .tracking h3 {
